<resources>
    <string name="app_name">Android Test</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_library_item">Library Information</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="profile_picture_description">User\'s profile picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First Name</string>
    <string name="save">Save</string>
</resources>